# the_project

./: .envrc  .gitignore  README.md  flake.nix  result
nix/kapitan/: apps.nix  packages.nix
nix/local/: apps.nix  configs.nix  shells.nix
nix/local/configs/: tmuxinator-infra-minimal.yml  vector-input.toml
nix/nats/: apps.nix  packages.nix
nix/nats-server/: packages.nix
nix/vector/: apps.nix  containers.nix  packages.nix  pg_config.toml
termlines/: flake.nix  pyproject.toml
termlines/src/: main.py
